<resources>
    <string name="app_name">Jsoup-Study</string>

    <string name="scale_down_show_behavior">com.asura.jsoup_study.view.behavior.ScaleDownShowBehavior</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--nav-->
    <string name="nav_title_dev">开发者信息</string>
    <string name="nav_github">Github</string>
    <string name="nav_jianshu">简书</string>
    <string name="nav_weibo">微博</string>
    <string name="nav_title_setting">设置</string>
    <string name="nav_clear_cache">清理缓存</string>
    <string name="nav_update">检查更新</string>
    <string name="nav_about">版本 V %1$s</string>

    <!--menu-->
    <string name="menu_new_girl">最新套图</string>
    <string name="menu_figure_girl">花样女神</string>
    <string name="menu_laugh_girl">女神笑了</string>

    <string name="tip_double_click">双击标题栏快速返回顶部</string>
</resources>
