<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/nav_title_dev">
        <item
            android:id="@+id/nav_github"
            android:icon="@drawable/ic_radio_exist_goods_checked"
            android:title="@string/nav_github"/>
        <item
            android:id="@+id/nav_jianshu"
            android:icon="@drawable/ic_radio_exist_goods_checked"
            android:title="@string/nav_jianshu"/>
        <item
            android:id="@+id/nav_weibo"
            android:icon="@drawable/ic_radio_exist_goods_checked"
            android:title="@string/nav_weibo"/>
    </item>

    <item android:title="@string/nav_title_setting">
        <menu>
            <item
                android:id="@+id/nav_clear_cache"
                android:icon="@drawable/ic_action_update"
                android:title="@string/nav_clear_cache"/>
            <item
                android:id="@+id/nav_update"
                android:icon="@drawable/ic_action_about"
                android:title="@string/nav_update"/>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_action_setting"
                android:title="@string/nav_about"/>
        </menu>
    </item>

</menu>
